# agentes-ai-apps

./: .gitignore  README.md  pyproject.toml
agents/: 1-intro_lcel.ipynb  2-tagging.ipynb  3-extraction.ipynb  4-tools.ipynb  5-tools_externa.ipynb  6-tools_default.ipynb  7-agent.ipynb  8-agent_analista.ipynb  requirements.txt
crewAI/crewAI-deploy/crew_deploy/: README.md  pyproject.toml  report.md
crewAI/crewAI-deploy/crew_deploy/knowledge/: user_preference.txt
crewAI/crewAI-deploy/crew_deploy/src/crew_deploy/: main.py
crewAI/crewAI-projeto/: requirements.txt
crewAI/crewAI-projeto/create_crew/: README.md  pyproject.toml  report.md
crewAI/crewAI-projeto/create_crew/Users/luizfelipew/Documents/git/AI/Exploring-LLMs/agents/agentes-ai-apps/crewAI/crewAI-projeto/create_crew/src/create_crew/output/: agents.yaml  crew.py  tasks.yaml
crewAI/crewAI-projeto/create_crew/crewAI/crewAI-projeto/create_crew/src/create_crew/output/: agents.yaml  tasks.yaml
crewAI/crewAI-projeto/create_crew/knowledge/: user_preference.txt
crewAI/crewAI-projeto/create_crew/output/: agents.yaml  crew.py  tasks.yaml
crewAI/crewAI-projeto/create_crew/src/create_crew/: crew.py  main.py
crewAI/crewAI-projeto/create_crew/src/create_crew/config/: agents.yaml  tasks.yaml
crewAI/crewAI-projeto/crew_pdf/: README.md  pyproject.toml
crewAI/crewAI-projeto/crew_pdf/src/crew_pdf/: crew.py  main.py
crewAI/crewAI-projeto/crew_pdf/src/crew_pdf/config/: agents.yaml  tasks.yaml
crewAI/crewAI-projeto/crew_tools/: README.md  Relatorio_Pesquisa_AI_LLMs_2025.txt  pyproject.toml
crewAI/crewAI-projeto/crew_tools/src/crew_tools/: crew.py  main.py
crewAI/crewAI-projeto/crew_tools/src/crew_tools/config/: agents.yaml  tasks.yaml
crewAI/crewAI-projeto/projeto_novo/: README.md  pyproject.toml
crewAI/crewAI-projeto/projeto_novo/src/projeto_novo/: crew.py  main.py
crewAI/crewai-test/: agent.ipynb  requirements.txt
langchain/: 1-model.ipynb  10-vector_store.ipynb  11-retrieval.ipynb  12-projeto.ipynb  2-prompt_template.ipynb  3-output_parser.ipynb  4-memory.ipynb  5-chains.ipynb  6-router_chains.ipynb  7-document_loader.ipynb  8-text_splitting.ipynb  9-embeddings.ipynb  pyproject.toml  reconhecedor.json  requirements.txt
langchain/arquivo/chat_retrieval_db/: chroma.sqlite3
langchain/files/: langchain_cache.sqlite
openai/: 1-generate_text.ipynb  10-assistente_voz.py  2-chatbot.py  2-chatbot_cor.py  3-fc_calling.ipynb  4-chat_finance.py  4-chat_finance_st.py  4-chat_finance_st_old.py  5-assistent.ipynb  6-assistant_dados.ipynb  7-assistant-retrieval.ipynb  8-vc.ipynb  9-tts_stt.ipynb  generate_csv.py  requirements.txt  sales_data.csv  test_yfinance.ipynb
