[project]
name = "create_crew"
version = "0.1.0"
description = "create_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
create_crew = "create_crew.main:run"
run_crew = "create_crew.main:run"
train = "create_crew.main:train"
replay = "create_crew.main:replay"
test = "create_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
