[project]
name = "crew_pdf"
version = "0.1.0"
description = "crew_pdf using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agentops>=0.4.21",
    "crewai[tools]>=0.121.1,<1.0.0",
]

[project.scripts]
crew_pdf = "crew_pdf.main:run"
run_crew = "crew_pdf.main:run"
train = "crew_pdf.main:train"
replay = "crew_pdf.main:replay"
test = "crew_pdf.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
