[project]
name = "crew_tools"
version = "0.1.0"
description = "crew_tools using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agentops>=0.4.21",
    "crewai[tools]>=0.121.1,<1.0.0",
]

[project.scripts]
crew_tools = "crew_tools.main:run"
run_crew = "crew_tools.main:run"
train = "crew_tools.main:train"
replay = "crew_tools.main:replay"
test = "crew_tools.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
