[project]
name = "projeto_novo"
version = "0.1.0"
description = "projeto_novo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
projeto_novo = "projeto_novo.main:run"
run_crew = "projeto_novo.main:run"
train = "projeto_novo.main:train"
replay = "projeto_novo.main:replay"
test = "projeto_novo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
